Dark mode fix

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ body.dark-mode .formContainer {
     color: white;
 }
 
+body.dark-mode .contact-card {
+    color: black;
+}
+
 .message-item {
     padding: 10px;
     color: white;
@@ -282,7 +286,6 @@ body.dark-mode .formContainer {
 }
 
 @media screen and (max-width: 768px) and (max-height: 1024px) {
-
     .formContainer {
         flex-direction: column;
         flex-wrap: nowrap;
@@ -319,7 +322,6 @@ body.dark-mode .formContainer {
         text-align: center;
         padding: 10px;
     }
-
 }
 
 nav.formContainer {
@@ -374,7 +376,7 @@ body.dark-mode .navButton:hover {
     font-size: 20px;
     color: inherit;
     transition: transform 0.2s;
-    margin-left: auto; 
+    margin-left: auto;
 }
 
 #darkModeToggle:hover {
@@ -420,7 +422,7 @@ body.dark-mode .navButton:hover {
     font-weight: 600;
     text-align: left;
     max-width: 500px;
-    margin: 0; 
+    margin: 0;
 }
 
 .linkedin-links {
@@ -428,9 +430,9 @@ body.dark-mode .navButton:hover {
     justify-content: center;
     gap: 15px;
     margin-top: 20px;
-  }
-  
-  .linkedin-btn {
+}
+
+.linkedin-btn {
     background-color: #0077b5;
     color: white;
     font-size: 18px;
@@ -444,14 +446,13 @@ body.dark-mode .navButton:hover {
     justify-content: center;
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.2s ease;
-  }
-  
-  .linkedin-btn:hover {
+}
+
+.linkedin-btn:hover {
     background-color: #005983;
     transform: scale(1.1);
-  }
-  
-  body.dark-mode .linkedin-btn {
+}
+
+body.dark-mode .linkedin-btn {
     background-color: #005983;
-  }
-  
+}
